kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    prometeus: dev-environment
  annotations:
    linkerd.io/inject: enabled # enable linkerd service mesh
