kubernetes/03-scylla.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: scylla-external
#   namespace: default
# spec:
#   type: ExternalName
#   externalName: host.docker.internal
#   ports:
#     - port: 9042
#       targetPort: 9042
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: scylla-external
# spec:
#   selector:
#     app.kubernetes.io/name: ScyllaDB
#   ports:
#     - name: http
#       protocol: TCP
#       port: 9042
#       targetPort: 9042
#   externalIPs:
#     - 10.10.10.1
---
apiVersion: v1
kind: Service
metadata:
  name: scylla-external
  namespace: dev
spec:
  ports:
    - port: 9042
      targetPort: 9042
  clusterIP: None # Headless service
---
apiVersion: v1
kind: Endpoints
metadata:
  name: scylla-external
  namespace: dev
subsets:
  - addresses:
      - ip: 10.10.10.1
    ports:
      - port: 9042
