kubernetes/rust-ctrl-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-ctrl-service
spec:
  type: NodePort
  selector:
    app: rust-ctrl
  ports:
    - port: 8080
      targetPort: 8080
